--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
           <a href="https://github.com/THreat80">
             <img
               width="300px"
-              src="https://media.licdn.com/dms/image/D4D03AQHDodwuoIqrvg/profile-displayphoto-shrink_800_800/0/1690862742657?e=1697068800&v=beta&t=5ZaDsTjMXuGrHFXgQ0FqbsswHG_tgWmndRnvlTCWPVU"
-              alt="Aryan Sharma's Photo"
+              src="https://github.com/account" alt="Aryan Sharma's Photo"
           /></a>
         </td>
         <td>
