--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <a href="https://github.com/THreat80">
             <img
               width="300px"
-              src="https://github.com/account" alt="Aryan Sharma's Photo"
+              src="https://avatars.githubusercontent.com/u/95568087?v=4" alt="Aryan Sharma's Photo"
           /></a>
         </td>
         <td>
